@@ -173,6 +173,8 @@ vehicle.charge.timermode.off                  Vehicle charge timer mode has been
 vehicle.charge.timermode.on                   Vehicle charge timer mode has been switched on
 vehicle.charge.type                 <type>    Vehicle charge connection type has changed (e.g. ccs/type2/…)
 vehicle.drivemode.<n>                         Vehicle drivemode has been set to profile <n> (vehicle specific)
+vehicle.ecu.start                             Called after the ECU is started.
+vehicle.ecu.stop                              Called before the ECU is stopped.
 vehicle.gear.forward                          Vehicle has been put in forward gear
 vehicle.gear.neutral                          Vehicle has been put in neutral gear
 vehicle.gear.reverse                          Vehicle has been put in reverse gear
