@@ -173,10 +173,12 @@ obd2ecu::obd2ecu(const char* name, canbus* can)
   xTaskCreatePinnedToCore(OBD2ECU_task, "OVMS OBDII ECU", 6144, (void*)this, 5, &m_task, CORE(1));
 
   MyCan.RegisterListener(m_rxqueue);
+  NotifyStartup();
   }
 
 obd2ecu::~obd2ecu()
   {
+  NotifyShutdown();
   m_can->SetPowerMode(Off);
   MyCan.DeregisterListener(m_rxqueue);
 
@@ -184,6 +186,16 @@ obd2ecu::~obd2ecu()
   vTaskDelete(m_task);
 
   ClearMap();
+  }
+
+void obd2ecu::NotifyStartup()
+  {
+  MyEvents.SignalEvent("vehicle.ecu.start", NULL);
+  }
+
+void obd2ecu::NotifyShutdown()
+  {
+  MyEvents.SignalEvent("vehicle.ecu.stop", NULL);
   }
 
 void obd2ecu::SetPowerMode(PowerMode powermode)
