@@ -312,6 +312,8 @@ class OvmsVehicle : public InternalRamAllocated
     void VehicleConfigChanged(std::string event, void* data);
     void PollerSend(bool fromTicker);
     void PollerReceive(CAN_frame_t* frame, uint32_t msgid);
+    void PollerNextTick(bool fromTicker);
+    void ECUEventListener(std::string event);
 
   protected:
     virtual void IncomingFrameCan1(CAN_frame_t* p_frame);
@@ -319,6 +321,7 @@ class OvmsVehicle : public InternalRamAllocated
     virtual void IncomingFrameCan3(CAN_frame_t* p_frame);
     virtual void IncomingFrameCan4(CAN_frame_t* p_frame);
 
+    virtual void ECUStatusChange(bool ecuOn, bool carOn);
   protected:
     virtual void PollerStateTicker();
     virtual void IncomingPollReply(canbus* bus, uint16_t type, uint16_t pid, uint8_t* data, uint8_t length, uint16_t mlremain);
